[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "clock-doctor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path       = "src/lib.rs"


[dependencies]
chrono      = "0.4.38"
clap        = { version = "4.5.4", features = ["derive"] }
log         = "0.4.21"
napi        = "2"
napi-derive = "2"
sntpc       = "0.3.7"

[build-dependencies]
napi-build = "2"


[target.'cfg(not(windows))'.dependencies]
libc = "0.2.154"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["sysinfoapi", "minwinbase"] }

[profile.release]
lto = true
